--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-  <script src="/bundle.js" ></script> 
-</head>
-<body>
-  Hello World
-  <div id="mount"></div>
-</body>
+  <head>
+    <title></title>
+    <script src="/bundle.js" ></script> 
+  </head>
+  <body>
+    <div id="mount"></div>
+  </body>
 </html>
